feat: Enhance product validation and update user product management functionality

--- a/users_settings.json
+++ b/users_settings.json
@@ -1,8 +1,8 @@
 {
     "232": {
         "contact_name": "Si",
-        "website_url": "",
-        "email_address": "",
-        "phone_number": ""
+        "website_url": "www.someurl.com",
+        "email_address": "si@ntsa.uk",
+        "phone_number": "07989389179"
     }
 }
