feat: Add Wix API integration for fetching discounted products and update user settings

--- a/users_settings.json
+++ b/users_settings.json
@@ -3,6 +3,7 @@
         "contact_name": "Si",
         "website_url": "www.someurl.com",
         "email_address": "si@ntsa.uk",
-        "phone_number": "07989389179"
+        "phone_number": "07989389179",
+        "wixClientId": "9fa0f271-1600-4282-9fae-d841be6aaff6"
     }
 }
