--- a/web.config
+++ b/web.config
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <defaultDocument>
-            <files>
-                <remove value="index.htm" />
-                <remove value="Default.asp" />
-                <remove value="Default.htm" />
-                <add value="login.html" />
-            </files>
-        </defaultDocument>
+        <handlers>
+            <add name="FlaskFastCGI" 
+                 path="*" 
+                 verb="*" 
+                 modules="FastCgiModule" 
+                 scriptProcessor="C:\Python\Python312\python.exe|C:\Python\Python312\Lib\site-packages\wfastcgi.py" 
+                 resourceType="Unspecified" 
+                 requireAccess="Script" />
+        </handlers>
+        <fastCgi>
+            <application fullPath="C:\Python\Python312\python.exe" 
+                         arguments="C:\Python\Python312\Lib\site-packages\wfastcgi.py" 
+                         maxInstances="4" 
+                         idleTimeout="300" 
+                         activityTimeout="30" 
+                         requestTimeout="90" 
+                         instanceMaxRequests="10000">
+                <environmentVariables>
+                    <environmentVariable name="WSGI_HANDLER" value="madeira.app" />
+                    <environmentVariable name="PYTHONPATH" value="C:\inetpub\clubmadeira.io" />
+                </environmentVariables>
+            </application>
+        </fastCgi>
     </system.webServer>
 </configuration>
